--- a/sand/build.gradle
+++ b/sand/build.gradle
@@ -1,3 +1,11 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "program"
+mainClassName = "com.stqa.pft.sand.Program"
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'org.testng:testng:7.0.0-beta3'
+}
